--- a/03_multiclass.ipynb
+++ b/03_multiclass.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> **Citation**: The penguins dataset used in the this exercise is a subset of data collected and made available by [Dr. Kristen\n",
+        "> **Citation**: The penguins dataset used here is a subset of data collected and made available by [Dr. Kristen\n",
         "Gorman](https://www.uaf.edu/cfos/people/faculty/detail/kristen-gorman.php)\n",
         "and the [Palmer Station, Antarctica LTER](https://lternet.edu/site/palmer-antarctica-lter), a\n",
         "member of the [Long Term Ecological Research Network](https://lternet.edu)."
